Adding an adaptive and mobile versions, improved styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="app">
     <header>
-      <h1>Fuel Consumption Calculator</h1>
+      <h1>Fuel Calculator</h1>
     </header>
 
     <div class="inputs">
@@ -22,21 +22,19 @@
         <select id="currency" name="currency" class="input-field dropdown">
           <option value="uah" style="
                 font-family: Arial;
-                padding: 0.25rem 0;
                 padding-left: 1.25rem;
+
               ">
             UAH
           </option>
           <option value="usd" style="
                 font-family: Arial;
-                padding: 0.25rem 0;
                 padding-left: 1.25rem;
               ">
             USD
           </option>
           <option value="eur" style="
                 font-family: Arial;
-                padding: 0.25rem 0;
                 padding-left: 1.25rem;
               ">
             EUR
@@ -57,12 +55,12 @@
           <h2 class="tripcost-heading">Trip will cost</h2>
           <h3 id="tripcost">0</h3>
         </div>
-
         <div class="fuelcostbox">
           <h2 class="fuelcost-heading">Fuel needed</h2>
           <h4 id="fuelcost">0</h4>
         </div>
       </div>
+
     </div>
   </div>
 
