--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#2A2E32"/>
   <title>Oil Consumption Calculator</title>
   <link rel="stylesheet" href="reset.css" />
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="./img/apple-touch-icon.png">
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -23,7 +26,6 @@
           <option value="uah" style="
                 font-family: Arial;
                 padding-left: 1.25rem;
-
               ">
             UAH
           </option>
@@ -64,7 +66,12 @@
     </div>
   </div>
 
-  <script src="/script.js"></script>
+  <script> if('serviceWorker'in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+  }
+  </script>
+  <script src="script.js"></script>
+
 </body>
 
 </html>
