--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#2A2E32"/>
-  <title>Oil Consumption Calculator</title>
+  <title>Fuel Calculator</title>
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json">
