--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
 
   <script> if('serviceWorker'in navigator) {
-    navigator.serviceWorker.register('/service-worker.js')
+    navigator.serviceWorker.register('/sw.js')
   }
   </script>
   <script src="script.js"></script>
